[package]
name = "app"
version = "0.1.0"
description = "An ICU demand forecasting app using SMA"
authors = ["Ashish S. <ashish.2017@hotmail.com>"]
license = "BSD BSD 3-Clause License"
repository = "https://github.com/asher-gh/4cast"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["dialog-all"] }
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
csv = "1.3.0"
thiserror = "1.0.49"
simple_moving_average = "0.1.2"
sunscreen = { version = "0.8.1" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "fhe_bench"
harness = false

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
